# AI-token-analyzer

./: .gitignore  README.md  pyproject.toml  starter.sh
src/ai_token_analyzer/: __init__.py  analysis.py  background.py  cli.py  collector.py  storage.py  util.py
tests/: test_background.py
